[package]
name = "tuff-cse-cli"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cse_txn"
path = "src/main.rs"

[dependencies]
tuff-cse-core = { path = "../tuff-cse-core" }
tuff-cse-txn = { path = "../tuff-cse-txn" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
